--- a/dashboard.html
+++ b/dashboard.html
@@ -183,9 +183,9 @@
                         <td style="font-weight: bold">SUSYANTI AMELIA</td>
                     </tr>
                     <tr>
-                        <td>NIP</td>
+                        <td>NIPD</td>
                         <td>:</td>
-                        <td>3130019048</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Jenis Kelamin</td>
