--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <i class="fas fa-lock"></i>
                 <input type="password" name="password" placeholder="Password">
             </div>
+            <div>
                 <a href="dashboard.html" name="login" class="btn-input">Login</a>
+            </div>
             <div class="bottom">
                 <p>Belum punya akun?
                     <a href="register.html">Register disini</a>
