--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <i class="fas fa-lock"></i>
                 <input type="password" name="password" placeholder="Password">
             </div>
-            <a href="dashboard.html">
-                <button type="submit" name="login" class="btn-input">Login</button>
-            </a>
+            <div  class="btn-input">
+                <center><a href="dashboard.html" name="login">Login </a></center>
+            </div>
             <div class="bottom">
                 <p>Belum punya akun?
                     <a href="register.html">Register disini</a>
