--- a/diskon.html
+++ b/diskon.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,10 +16,10 @@
 		<div class="input-item">
 			<label>Pilih Produk :</label>
 			<select >
-				<option>Hoodie</option>
-				<option>Jaket</option>
-				<option>Sweater</option>
-				<option>Kaos</option>
+				<option>Sepatu</option>
+				<option>Baju kaos</option>
+				<option>Topi</option>
+				<option>Tas</option>
 			</select>
 				
 		</div>
@@ -43,8 +44,9 @@
 			<input type="text" id="pay" disabled>
 		</div>
 		<input type="reset" value="Reset" class="reset">
-		<a href="beranda.html"> <span>Kembali</span></a> </li>
-		</form>	
+		<a href="dashboard.html"> <span>Kembali</span></a> </li>
+
+		</form>
 	</div>
 </body>
 </html>
