--- a/beranda-kalkulator.html
+++ b/beranda-kalkulator.html
@@ -6,7 +6,7 @@
   <title> Aplikasi Kalkulator</title>
   <style type="text/css">
     body{
-      background: whitesmoke;
+      background: url(mio.jpg);
       background-color: #IE90F;
       font-family: monospace;
       position: right;
