--- a/beranda-kalkulator.html
+++ b/beranda-kalkulator.html
@@ -7,7 +7,7 @@
   <style type="text/css">
     body{
       background: url(mio.jpg);
-      background-color: #IE90F;
+      background-color:;
       font-family: monospace;
       position: right;
     }
@@ -38,7 +38,7 @@
 
 </head>
 <body>
-  <h1><center><font color="red">KALKULATO</font></center></h1>
+  <h1><center><font color="white">KALKULATOR</font></center></h1>
 <center><div class="kotak">
   <table border="1" cellspacing="0">
     <tr>
@@ -105,7 +105,7 @@
 <!--Footer-part-->
 
 <div class="row-fluid">
- <center> <div id="footer" class="span12"> <?php echo date('Y'); ?> &copy; UKK1LELAWATI <a href="#"></a> </div></center>
+ <center> <div id="footer" class="span12"> <?php echo date('Y'); ?> &copy; UKK1SUSYSNTI <a href="#"></a> </div></center>
 </div>
 
 <!--end-Footer-part-->
