--- a/beranda-kalkulator.html
+++ b/beranda-kalkulator.html
@@ -105,7 +105,7 @@
 <!--Footer-part-->
 
 <div class="row-fluid">
- <center> <div id="footer" class="span12"> <?php echo date('Y'); ?> &copy; UKK1SUSYSNTI <a href="#"></a> </div></center>
+ <center> <div id="footer" class="span12"> <?php echo date('Y'); ?> &copy; UKK1SUSYANTI <a href="#"></a> </div></center>
 </div>
 
 <!--end-Footer-part-->
