--- a/beranda-kalkulator.html
+++ b/beranda-kalkulator.html
@@ -101,6 +101,11 @@
 </div>
 
 <!--end-main-container-part-->
+<div>
+  <a href="dashboard.html">
+                <button type="submit" name="login" class="btn-input">kembali</button>
+            </a>
+</div>
 
 <!--Footer-part-->
 
