--- a/beranda-kalkulator.html
+++ b/beranda-kalkulator.html
@@ -103,9 +103,9 @@
 <!--end-main-container-part-->
 
 <!--Footer-part-->
-<a href="dashboard.html">
-    <button type="submit" name="login" class="btn-input">kembali</button>
-</a>
+<div  class="btn-input">
+    <center><a href="dashboard.html" name="login">Login </a></center>
+ </div>
 <div class="row-fluid">
  <center> <div id="footer" class="span12"> <?php echo date('Y'); ?> &copy; UKK1SUSYANTI <a href="#"></a> </div></center>
 </div>
