--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="password" name="password" placeholder="Password">
             </div>
             <div  class="btn-input">
-                <center><a href="dashboard.html" name="login">Login </a></center>
+                <center><a href="dashboard.html" name="login"><font color="white">Login</font> </a></center>
             </div>
             <div class="bottom">
                 <p>Belum punya akun?
