--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="password" name="password" placeholder="Password">
             </div>
             <div  class="btn-input">
-                <button onclick="location.href='dashboard.html';">kembali</button>
+                <button onclick="location.href='dashboard.html';">login</button>
             </div>
             <div class="bottom">
                 <p>Belum punya akun?
