--- a/dashboard.html
+++ b/dashboard.html
@@ -166,6 +166,7 @@
         <a href="#"><i class="fas fa-desktop"></i><span>Biodataku</span></a>
         <a href="diskon.html"><i class="fas fa-sign-in-alt"></i> <span>perhitungan</span></a>
         <a href="beranda-kalkulator.html"><i class="fas fa-sign-in-alt"></i> <span>Kalkulator</span></a>
+        <a href="todolist.php"><i class="fas fa-sign-out-alt"></i><span>todolist</span></a>
         <a href="index.html"><i class="fas fa-sign-out-alt"></i><span>Keluar</span></a>
     </div>
     <div class="content">
@@ -184,9 +185,9 @@
                         <td style="font-weight: bold">SUSYANTI AMELIA</td>
                     </tr>
                     <tr>
-                        <td>NIPD</td>
+                        <td>NIP</td>
                         <td>:</td>
-                        <td></td>
+                        <td>3130019048</td>
                     </tr>
                     <tr>
                         <td>Jenis Kelamin</td>
