--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <i class="fas fa-lock"></i>
                 <input type="password" name="password" placeholder="Password">
             </div>
-            <div  class="btn-input">
+            <a  class="btn-input">
                 <button onclick="location.href='dashboard.html';">login</button>
-            </div>
+            </a>
             <div class="bottom">
                 <p>Belum punya akun?
                     <a href="register.html">Register disini</a>
