--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <i class="fas fa-lock"></i>
                 <input type="password" name="password" placeholder="Password">
             </div>
-            <a  class="btn-input">
+            <a href="dashboard.html">
                 <button onclick="location.href='dashboard.html';">login</button>
             </a>
             <div class="bottom">
